refactor(MainController): Cars를 생성하는 기능 변경